--- a/Stylesprof.css
+++ b/Stylesprof.css
@@ -15,8 +15,31 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
+    text-color: white;
+}
+.navbar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
 }
 
+.navbar ul li {
+    margin-right: 20px;
+}
+
+.navbar ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.navbar ul li a:hover {
+    color: #ffcc00;
+}
 h1 {
     text-align: center;
     color: #2c3e50;
