--- a/mkForm.css
+++ b/mkForm.css
@@ -10,7 +10,7 @@ form {
     padding: 40px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 350px;
     margin: auto;  
 }
 
@@ -40,15 +40,6 @@ input, button {
     border: 1px solid #ddd;
     border-radius: 5px;
 }
-button {
-    background-color: #28a745;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    font-family: Barlow;
-    font-weight: bold;
-}
 button:hover {
     background-color: #218838;
 }
@@ -56,7 +47,11 @@ button:hover {
 #studentForm button {
     background-color: rgb(121, 2, 91);
 }
-
+.btn-container {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+}
 .btn-container button {
     flex: 1;
 }
@@ -97,3 +92,35 @@ input {
 option {
         color: rgb(0, 25, 106); /* Optional: Set the color */
 }
+label {
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+  }
+
+  input,
+  select,
+  button {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 15px;
+    border-radius: 5px;
+    border: 1px solid #590047;
+    font-family: bahnschrift;
+    font-size: 20px;
+  }
+
+  button {
+    background: #5f0054;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+  }
+
+  button:hover {
+    background: #0056b3;
+  }
+
+
+  
