--- a/rolling.css
+++ b/rolling.css
@@ -11,16 +11,28 @@
       background-color: #007bff; /* Blue bar background */
       color: white;
       overflow: hidden;
-      padding: 10px 2px;
+      padding: 6px 2px;
       box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
     }
+    .banner-container2 {
+        position: fixed;
+        bottom: 115px ;
+        width: 100%;
+        background-color: #640367; /* Blue bar background */
+        color: white;
+        overflow: hidden;
+        padding: 6px 2px;
+        box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
+      }
 
     .rolling-text {
       display: inline-block;
       white-space: nowrap;
-      font-size: 1.5em;
+      font-size: 1em;
       font-weight: bold;
-      animation: scroll-text 10s linear infinite;
+      animation: scroll-text 18s linear infinite;
+      font-family: keraleeyam;
+      font-weight: normal;
     }
 
     @keyframes scroll-text {
